feat(semantic-search): consolidate API under /semantic-search with model registry
- Replace /vector-search and /embedding controllers with SemanticSearchController
  at /semantic-search (GET only — POST dropped as unused)
- Add GET /semantic-search/models returning enabled models from registry
- Add model param to /semantic-search/embed (was always using default)
- Introduce ModelRegistryProperties (@ConfigurationProperties) replacing ad-hoc
  @Value("${embedding.model}") and Environment lookups across services/client
- Add ModelInfo DTO for public model list response
- Extract embedding config into embedding.properties (imported via spring.config.import)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>