@@ -2,7 +2,6 @@ package uk.ac.ebi.protvar.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import uk.ac.ebi.protvar.client.EmbeddingClient;
 
@@ -16,15 +15,12 @@ public class EmbeddingService {
 
     private final EmbeddingClient embeddingClient;
 
-    @Value("${embedding.model:biobert}")
-    private String defaultModel;
-
-    public Optional<List<Number>> generateEmbedding(String text) {
-        if (text == null || text.trim().isEmpty()) {
+    public Optional<List<Number>> generateEmbedding(String text, String model) {
+        if (text == null || text.isBlank()) {
             log.warn("Attempted to generate embedding for empty text");
             return Optional.empty();
         }
-        return embeddingClient.getEmbedding(text, defaultModel);
+        return embeddingClient.getEmbedding(text, model);
     }
 
     public boolean isServiceAvailable() {
